syntax = "proto3";

option java_package = "org.spin.proto.service";
option java_multiple_files = true;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

package service;

// Get Entity Request
message GetEntityRequest {
	int32 id = 1;
	string table_name = 2;
	//	Filters
	string filters = 3;
	string sort_by = 4;
	repeated string group_columns = 5;
	repeated string select_columns = 6;
	int32 page_size = 7;
	string page_token = 8;
}

// List Entities Request
message ListEntitiesRequest {
	string filters = 1;
	string sort_by = 2;
	repeated string group_columns = 3;
	repeated string select_columns = 4;
	int32 page_size = 5;
	string page_token = 6;
	string search_value = 7;
	string table_name = 8;
}

// List Entities Response
message ListEntitiesResponse {
	int64 record_count = 1;
	repeated Entity records = 2;
	string next_page_token = 3;
}

// Value Object from ADempiere
message Entity {
	int32 id = 1;
	string table_name = 2;
	google.protobuf.Struct values = 3;
}

// Create Entity Request
message CreateEntityRequest {
	string table_name = 1;
	google.protobuf.Struct attributes = 2;
}

// Update Entity Request
message UpdateEntityRequest {
	string table_name = 1;
	int32 id = 2;
	google.protobuf.Struct attributes = 3;
}

// Delete Entity Request
message DeleteEntityRequest {
	string table_name = 1;
	int32 id = 2;
}

// Delete Batch Entity Request
message DeleteEntitiesBatchRequest {
	string table_name = 1;
	repeated int32 ids = 2;
}

//	Entities Selections
message KeyValueSelection {
	int32 selection_id = 1;
	google.protobuf.Struct values = 2;
}

// BusinessProcess Request
message RunBusinessProcessRequest {
	int32 id = 1;
	string process_code = 2;
	string table_name = 3;
	int32 record_id = 4;
	int32 table_selected_id = 5;
	string report_type = 6;
	int32 print_format_id = 7;
	int32 report_view_id = 8;
	bool is_summary = 9;
	google.protobuf.Struct parameters = 10;
	repeated KeyValueSelection selections = 11;
}

message RunBusinessProcessResponse {
	int32 id = 1;
	string name = 2;
	string description = 3;
	int32 instance_id = 4;
	bool is_error = 5;
	string summary = 6;
	string result_table_name = 7;
	bool is_processing = 8;
	google.protobuf.Timestamp last_run = 9;
	repeated ProcessInfoLog logs = 10;
	google.protobuf.Struct parameters = 11;
	ReportOutput output = 12;
	repeated ProcesInstanceParameter process_intance_parameters = 13;
}

//	BusinessProcess Log result
message ProcessInfoLog {
	int32 record_id = 1;
	string log = 2;
}

//	Response with log and values from server
message ProcesInstanceParameter {
	int32 id = 1;
	string name = 2;
	string column_name = 3;
	google.protobuf.Value value = 4;
	google.protobuf.Value value_to = 5;
}

//	Used for get output from report / BusinessProcess like PDF, HTML another result for show to end user
message ReportOutput {
	int32 id = 1;
	string name = 2;
	string description = 3;
	string file_name = 4;
	string output = 5;
	string mime_type = 6;
	int64 data_cols = 7;
	int64 data_rows = 8;
	string header_name = 9;
	string footer_name = 10;
	int32 print_format_id = 11;
	int32 report_view_id = 12;
	string table_name = 13;
	bytes output_stream = 14;
	//	Output Type
	string report_type = 15;
}

// The greeting service definition.
service MiddlewareService {
	// Get a Entity
	rpc GetEntity(GetEntityRequest) returns (Entity) {
		option (google.api.http) = { get: "/v1/entities/{table_name}/{id}" };
	}
	// Create Entity Request
	rpc CreateEntity(CreateEntityRequest) returns (Entity) {
		option (google.api.http) = {
			post: "/v1/entities",
			body: "*"
		};
	}
	// Update Entity Request
	rpc UpdateEntity(UpdateEntityRequest) returns (Entity) {
		option (google.api.http) = {
			put: "/v1/entities/{table_name}/{id}",
			body: "*"
		};
	}
	// Delete Entity Request
	rpc DeleteEntity(DeleteEntityRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = { delete: "/v1/entities/{table_name}/{id}" };
	}
	// Delete Entity Request
	rpc DeleteEntitiesBatch(DeleteEntitiesBatchRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = { post: "/v1/entities/{table_name}/batch-delete" };
	}
	//	List a Entities
	rpc ListEntities(ListEntitiesRequest) returns (ListEntitiesResponse) {
		option (google.api.http) = { get: "/v1/entities/{table_name}" };
	}
	//	Request a BusinessProcess / Report
	rpc RunBusinessProcess(RunBusinessProcessRequest) returns (RunBusinessProcessResponse) {
		option (google.api.http) = {
			post: "/v1/process",
			body: "*"
		};
	}
}